# rust-music-tag

./: Cargo.toml  LICENSE
src/: error.rs  lib.rs
src/audio/: info.rs  mod.rs  pic.rs
src/lyrics/: mod.rs
