[package]
name = "music-tag"
version = "0.1.0"
edition = "2021"
description = "music tag for mp3, flac, m4a and ogg files"
keywords = ["mp3", "flac", "ogg", "m4a", "music"]
license = "MIT"
homepage = "https://github.com/KByys/rust-music-tag.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

metaflac = "0.2.5"
id3 = "1.9.0"
imagesize = "0.12.0"
mp4ameta = "0.11.0"
rodio = "0.17.3"
scraper = "0.18.1"
symphonia = "0.5.3"
base64 = "0.21.5"
